--- a/templates/add_new_user.html
+++ b/templates/add_new_user.html
@@ -1,34 +1,44 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-    <h1 class="center-align">Add New User</h1>
-
-    <form action="{{ url_for('add_new_user') }}" method="POST">
+    
+    <div class="container">
         <div class="row">
-            <div class="input-field col s12">
-                <i class="fas fa-user prefix left"></i>
-                <input id="username" name="username" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                <label for="username">Username</label>
+            <div class="col s12">
+                <h1 class="center-align">Add New User</h1>
             </div>
-            <div class="input-field col s12">
-                <i class="fas fa-envelope prefix left"></i>
-                <input id="email" name="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
-                <label for="email">Email address</label>
-            </div>
-            <div class="input-field col s12">
-                <i class="fas fa-key prefix left"></i>
-                <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                <label for="password">Password</label>
+        </div>        
+        <div class="row">
+            <div class="col s12">
+                <form class="admin-add-user" action="{{ url_for('add_new_user') }}" method="POST">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-user prefix left"></i>
+                            <input id="username" name="username" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                            <label for="username">Username</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <i class="fas fa-envelope prefix left"></i>
+                            <input id="email" name="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
+                            <label for="email">Email address</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <i class="fas fa-key prefix left"></i>
+                            <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <div class="row center-align">
+                        <div class="input-field col s12">
+                            <button type="submit" class="btn-large green darken-2">
+                                Add user&#33;
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="row center-align">
-            <div class="input-field col s12">
-                <button type="submit" class="btn-large green darken-2">
-                    Add user&#33;
-                </button>
-            </div>
-        </div>
-    </form>
+
+    </div>
 
 {% endblock %}
