--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,20 @@
 
     <div class="jumbotron center-align">
         <section class="callout">
-            <div class="card">
-                <div class="card-content waves-effect waves-block waves-light">
-                    <h3>Welcome to Fitipedia. <span class="card-title activator grey-text text-darken-4">Click Here</span></h3>
-                </div>
-                <div class="card-reveal">
-                    <p><i class="fas fa-times right card-title"></i>
-                        Fitipedia is an online dictionary that explains fitness jargon.<br>
-                        To look for definitions, enter keywords in the search bar, e.g. weights.<br>
-                        As a registered user, you can add your own contributions, as well as update and delete them.<br>
-                        You can also upvote and downvote users&#8211; contributions by clicking on the buttons below the definition.
-                    </p>
+            <div class="site-info">
+                <h3>Before you start, <a href="#modal_home" class="modal-trigger">Click Here</a></h3>
+                <div id="modal_home" class="modal">
+                    <div class="modal-header">
+                        <p><a href="{{ url_for('home_page') }}" class="right"><i class="fas fa-times"></i></a>
+                            Fitipedia is an online dictionary that explains fitness jargon.<br>
+                            To look for definitions, enter key words in the search bar, e.g. weights.<br>
+                            As a registered user, you can add your own entries, as well as update and delete them.<br>
+                            Click the thumbs up and thumbs down buttons to upvote or downvote users&#8211; entries.
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="{{ url_for('home_page') }}" class="btn grey">OK, thank you</a>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -61,67 +64,69 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <h2 class="center-align">Our current most popular terms</h2>
-            </div>
-        </div>
-        {% for term in popular_terms %}
+        {% if popular_terms|length >= 3 %}
             <div class="row">
                 <div class="col s12">
-                    <span class="term-name">{{ term.term_name }}</span>
-                </div>
-                <div class="col s12">
-                    <span>{{ term.term_definition }}</span>
-                </div>
-                <div class="col s12">
-                    {% if term.score >= 20 %}
-                        <span class="superscore">{{ term.score }}</span>
-                    {% else %}
-                        <span class="score">{{ term.score }}</span>
-                    {% endif %}
+                    <h2 class="center-align">Our most popular terms</h2>
                 </div>
             </div>
-        {% endfor %}
-        <div class="row center-align">
-            <div class="col s12">
-                <a href="{{ url_for('view_dictionary') }}" class="btn-large blue">View full dictionary</a>
+            {% for term in popular_terms %}
+                <div class="term-wrapper card-panel">
+                    <div class="row">
+                        <div class="col s12">
+                            <span class="term-name">{{ term.term_name }}</span>
+                        </div>
+                        <div class="col s12">
+                            <span>{{ term.term_definition }}</span>
+                        </div>
+                        <div class="col s12">
+                            <span>Score&#58; {% if term.score >= 20 %}<span class="superscore">{{ term.score }}</span>{% else %} <span class="score">{{ term.score }}</span> {% endif %}</span>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+            <div class="row center-align view-full-dict">
+                <div class="col s12">
+                    <a href="{{ url_for('view_dictionary') }}" class="btn-large blue">View full dictionary</a>
+                </div>
             </div>
-        </div>
+        {% endif %}
     </div>
     {% if session.user %}
         <div class="container contributions-container">
             <div class="row">
                 <div class="col s12">
-                    <h2 class="contributions-heading center-align">My Recent Contributions</h2>
+                    <h2 class="contributions-heading center-align">Your last 5 entries</h2>
                 </div>
             </div>
             {% for term in terms if term.created_by|lower == session.user|lower %}
                 {% if loop.index <= 5 %}
-                    <div class="row">
-                        <div class="col s12 l3">
-                            <span class="term-name"><strong>{{ term.term_name }}</strong></span>
-                        </div>
-                        <div class="col s12 l7">
-                            <span>{{ term.term_definition }}</span>
-                            <br>
-                            <br>
-                            <span><em>Last updated&#58; {{ term.created_on }}</em></span>
-                        </div>
-                        <div class="col s12 l2">
-                            <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small blue">
-                                <i class="fas fa-edit tooltipped" data-tooltip="EDIT TERM"></i>
-                            </a>
-                            <a href="#{{ term._id }}" class="btn-small red modal-trigger">
-                                <i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
-                            </a>
-                            <div id="{{ term._id }}" class="modal">
-                                <div class="modal-content">
-                                    <p>Are you sure you want to delete the term {{ term.term_name }}&#63;</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <a href="{{ url_for('home_page') }}" class="btn grey">Cancel</a>
-                                    <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red">Delete</a>
+                    <div class="term-wrapper card-panel">
+                        <div class="row">
+                            <div class="col s12 l3">
+                                <span class="term-name"><strong>{{ term.term_name }}</strong></span>
+                            </div>
+                            <div class="col s12 l7">
+                                <span>{{ term.term_definition }}</span>
+                                <br>
+                                <br>
+                                <span><em>Last updated&#58; {{ term.created_on }}</em></span>
+                            </div>
+                            <div class="col s12 l2">
+                                <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small blue">
+                                    <i class="fas fa-edit tooltipped" data-tooltip="EDIT TERM"></i>
+                                </a>
+                                <a href="#{{ term._id }}" class="btn-small red modal-trigger">
+                                    <i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
+                                </a>
+                                <div id="{{ term._id }}" class="modal">
+                                    <div class="modal-content">
+                                        <p>Are you sure you want to delete the term {{ term.term_name }}&#63;</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="{{ url_for('home_page') }}" class="btn grey">Cancel</a>
+                                        <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red">Delete</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +143,7 @@
                     {% endfor %}
                     <p>
                         {% if total|sum > 0 %}
-                            You have made {{ total|sum }} contribution{% if total|sum != 1 %}s{% endif %} so far.
+                            You have made {{ total|sum }} contribution{% if total|sum != 1 %}s{% endif %} to Fitipedia so far.
                         {% else %}
                             You haven&#8217;t made any contributions yet. Click below to add your first&#33;
                         {% endif %}
