--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container center-align">
     <div class="row">
         <div class="col s12">
-            <h1 class="dictionary-heading center-align">Dictionary</h1>
+            <h1 class="dictionary-heading">No results found</h1>
         </div>
     </div>
     <div class="row">
