--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row center-align">
             <div class="col s12">
-                <p>Username &#58; <span>{{ username }}</span></p>
+                <p>Username&#58; <span>{{ username }}</span></p>
                 {% set total = [] %}
                 {% for term in terms if session.user|lower == term.created_by|lower %}
                     {% set i = term.contribution_value|int %}
@@ -68,33 +68,35 @@
             </div>
             {% for term in terms %}
                 {% if term.created_by|lower == session.user|lower %}
-                    <div class="row">
-                        <div class="col s12 l4">
-                            <span class="term-name">{{ term.term_name }}</span>
-                        </div>
-                        <div class="col s12 l8">
-                            <span>{{ term.term_definition }}</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s6">
-                            <a href="#{{ term._id }}" class="btn-small delete right red modal-trigger">
-                                <span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
-                            </a>
-                            <div id="{{ term._id }}" class="modal">
-                                <div class="modal-content">
-                                    <p>Are you sure you want to delete the term {{ term.term_name }}&#63;</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <a href="{{ url_for('profile', username=session['user']) }}" class="btn grey">Cancel</a>
-                                    <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red ">Delete</a>
-                                </div>
+                    <div class="term-wrapper card-panel">
+                        <div class="row">
+                            <div class="col s12 l4">
+                                <span class="term-name">{{ term.term_name }}</span>
+                            </div>
+                            <div class="col s12 l8">
+                                <span>{{ term.term_definition }}</span>
                             </div>
                         </div>
-                        <div class="col s6">
-                            <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small edit blue">
-                                <span>Edit details</span><i class="fas fa-pen-square tooltipped" data-tooltip="EDIT DETAILS"></i>
-                            </a>
+                        <div class="row">
+                            <div class="col s6">
+                                <a href="#{{ term._id }}" class="btn-small delete right red modal-trigger">
+                                    <span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
+                                </a>
+                                <div id="{{ term._id }}" class="modal">
+                                    <div class="modal-content">
+                                        <p>Are you sure you want to delete the term {{ term.term_name }}&#63;</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="{{ url_for('profile', username=session['user']) }}" class="btn grey">Cancel</a>
+                                        <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red ">Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s6">
+                                <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small edit blue">
+                                    <span>Edit details</span><i class="fas fa-pen-square tooltipped" data-tooltip="EDIT DETAILS"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 {% endif %}
