--- a/templates/add_new_user.html
+++ b/templates/add_new_user.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <h1 class="center-align">Add New User</h1>
+                <h1 class="center-align add-user-heading">Add New User</h1>
             </div>
         </div>        
         <div class="row">
@@ -30,7 +30,7 @@
                     </div>
                     <div class="row center-align">
                         <div class="input-field col s12">
-                            <button type="submit" class="btn-large green darken-2">
+                            <button type="submit" class="btn-large green add darken-2">
                                 Add user&#33;
                             </button>
                         </div>
