--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
                 <h3 class="site-info-heading">Before you start, <a href="#modal_home" class="modal-trigger">Click Here</a></h3>
                 <div id="modal_home" class="modal">
                     <div class="modal-header">
-                        <p><a href="{{ url_for('home_page') }}" class="right"><i class="fas fa-times"></i></a>
+                        <a href="{{ url_for('home_page') }}" class="right close"><i class="fas fa-times"></i></a>
+                        <p>
                             Fitipedia is an online dictionary that explains fitness jargon.<br>
                             To look for definitions, enter key words in the search bar, e.g. weights.<br>
                             As a registered user, you can add your own entries, as well as update and delete them.<br>
@@ -16,7 +17,9 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="{{ url_for('home_page') }}" class="btn grey">OK, thank you</a>
+                        <div class="center-align">
+                            <a href="{{ url_for('home_page') }}" class="btn grey ok">OK, thank you</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -80,7 +83,7 @@
             {% endfor %}
             <div class="row center-align view-full-dict">
                 <div class="col s12">
-                    <a href="{{ url_for('view_dictionary') }}" class="btn-large blue">View full dictionary</a>
+                    <a href="{{ url_for('view_dictionary') }}" class="btn-large teal">View full dictionary</a>
                 </div>
             </div>
         {% endif %}
