--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -4,13 +4,13 @@
 
     <div class="row">
         <div class="col s12">
-            <h1 class="center-align">Manage Users</h1>
+            <h1 class="center-align manage-users-heading">Manage Users</h1>
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <h2 class="center-align">Currently registered users</h2>
+                <h2 class="center-align registered-users">Currently registered users</h2>
             </div>
         </div>
         {% for user in users %}
