--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
             {% endfor %}
             <div class="row center-align view-full-dict">
                 <div class="col s12">
-                    <a href="{{ url_for('view_dictionary') }}" class="btn-large teal">View full dictionary</a>
+                    <a href="{{ url_for('view_dictionary') }}" class="btn-large locate teal">View full dictionary</a>
                 </div>
             </div>
         {% endif %}
