--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
+    <div class="container center-align">
         <div class="row">
             <div class="col s12">
                 <h1>Page Not Found</h1>
@@ -14,7 +14,7 @@
         </div>
         <div class="row">
             <div class="col s12">
-                <a href="{{ url_for('home_page') }}" class="btn-large teal">Back to home</a>
+                <a href="{{ url_for('home_page') }}" class="btn-large locate teal">Back to home</a>
             </div>
         </div>
     </div>
