--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,6 +240,7 @@ nav .brand-logo {
 .registration,
 .add-definition
 .edit-data,
+.update-profile,
 .admin-add-user {
     margin: 30px 5px;
 }
@@ -280,10 +281,6 @@ nav .brand-logo {
 
 .introductory-para {
     font-size: 1.1rem;
-}
-
-.full-dictionary {
-    font-size: 2.6rem;
 }
 
 .term-wrapper {
@@ -449,8 +446,6 @@ nav .brand-logo {
 /*-- footer --*/
 
 .page-footer {
-    /* height: 10.3rem; */
-    /* position: absolute;  */
     text-align: center;
     bottom: 0;
     left: 0;
@@ -523,10 +518,6 @@ nav .brand-logo {
         font-size: 1.2rem;
     }
 
-    /* .callout {
-        padding: 0;
-    } */
-
     .jumbotron-header {
         font-size: 2.2rem;
         padding: 5px;
@@ -561,10 +552,6 @@ nav .brand-logo {
     main {
         padding-bottom: 4rem;
     }
-
-    /* .callout {
-        padding: 0;
-    } */
 
     .site-info-heading {
         font-size: 2rem;
@@ -652,10 +639,6 @@ nav .brand-logo {
     main {
         padding-bottom: 5rem;
     }
-/* 
-    .callout {
-        padding: 5px 5px 0;
-    } */
 
     .site-info {
         width: 60%;
@@ -753,12 +736,6 @@ nav .brand-logo {
         margin: 30px;
     }
 
-    .dictionary-field {
-        border-right: 1px solid #000000;
-        border-bottom: none;
-        margin-bottom: none;
-    }
-
     .welcome-heading,
     .user-info-heading,
     .term-info-heading {
@@ -800,10 +777,6 @@ nav .brand-logo {
     main {
         padding-bottom: 7.5rem;
     }
-
-    /* .callout {
-        padding: 30px 10px 0;
-    } */
 
     .site-info {
         width: 50%;
@@ -881,6 +854,7 @@ nav .brand-logo {
     .registration,
     .add-definition,
     .edit-data,
+    .update-profile,
     .admin-add-user {
         margin: 30px 40px;
     }
@@ -929,6 +903,7 @@ nav .brand-logo {
     .registration,
     .add-definition,
     .edit-data,
+    .update-profile,
     .admin-add-user {
         margin: 30px 100px;
     }
