--- a/templates/add_definition.html
+++ b/templates/add_definition.html
@@ -2,42 +2,42 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col s12">
-            <h1 class="center-align">Add Term</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <h1 class="center-align">Add Term</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12">
+                <form class="add-definition" method="POST" action="{{ url_for('add_definition') }}">
+                    <!-- term name -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-dumbbell prefix"></i>                
+                            <input id="term_name" name="term_name" type="text" minlength="2" maxlength="50" pattern="([^\s][A-z0-9À-ž\s]+)" class="validate" required>
+                            <label for="term_name">Term name</label>
+                        </div>
+                    </div>
+                    <!-- term definition -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-pencil-alt prefix"></i>
+                            <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" placeholder="Add your definition here. Please try to be as clear as possible." required></textarea>
+                            <label for="term_definition">Term definition</label>
+                        </div>
+                    </div>
+                    <!-- submit button -->
+                    <div class="row center-align">
+                        <div class="col s12">
+                            <button type="submit" class="btn-large add green darken-2">
+                                Add to dictionary
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col s12">
-            <form class="add-definition" method="POST" action="{{ url_for('add_definition') }}">
-                <!-- term name -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-dumbbell prefix"></i>                
-                        <input id="term_name" name="term_name" type="text" minlength="2" maxlength="50" pattern="([^\s][A-z0-9À-ž\s]+)" class="validate" required>
-                        <label for="category_name">Term name</label>
-                    </div>
-                </div>
-                <!-- term definition -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-pencil-alt prefix"></i>
-                        <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" placeholder="Add your definition here. Please try to be as clear as possible." required></textarea>
-                        <label for="term_definition">Term definition</label>
-                    </div>
-                </div>
-                <!-- submit button -->
-                <div class="row center-align">
-                    <div class="col s12">
-                        <button type="submit" class="btn-large add green darken-2">
-                            Add to dictionary
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
 
 {% endblock %}
