--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
     <link rel="manifest" href="{{ url_for('static', filename='favicon/site.webmanifest') }}" crossorigin="use-credentials">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    
+    
     {% block styles %}
     {% endblock %}
     <title>Fitipedia&#8211;the free online fitness dictionary</title>
@@ -51,7 +53,6 @@
         </nav>
 
         <!-- mobile side navbar -->
-
         <ul class="sidenav" id="mobile-demo">
             <li><a class="nav-link" href="{{ url_for('home_page') }}">Home</a></li>
             <li><a class="nav-link" href="{{ url_for('view_dictionary') }}">View Dictionary</a></li>
@@ -70,8 +71,8 @@
         </ul>
     </header>
 
+    <!-- display flash messages -->
     <section id="flashed_messages" class="center-align">
-        <!-- display flash messages -->
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
@@ -81,26 +82,29 @@
         {% endwith %}
     </section>
 
+    <!-- main content area -->
     <main>
         {% block content %}
     
         {% endblock %}
     </main>
 
+    <!-- back to top button -->
     <div id="returnToTop">
         <a href="#">
             <i class="fas fa-hand-point-up tooltipped" data-tooltip="BACK TO TOP"></i>
         </a>
 	</div>
 
+    <!-- footer -->
     <footer class="page-footer">
         <div class="info-container">
             <div class="row">
                 <div class="col l4 m4 s12">
                     <h6>Fitipedia Ltd.</h6>
                     <address>
-                        <i class="fas fa-location-arrow"></i> 93 Crown Street, London, SW5 7NL<br />
-                        <i class="fas fa-phone"></i> &#40;078&#41; 11 033 461<br />
+                        <i class="fas fa-location-arrow"></i> 93 Crown Street, London, SW5 7NL<br>
+                        <i class="fas fa-phone"></i> &#40;078&#41; 11 033 461<br>
                         <i class="fas fa-at"></i> <a href="mailto:#">info&#64;fitipedia.com</a>
                     </address>
                 </div>
@@ -142,13 +146,12 @@
         </div>
         <div class="copyright-info center-align">
             <div class="container">
-                <span class="copyright">&#169; Budget Helper <span id="copyrightYear"></span></span>
+                <span class="copyright">&#169; Budget Helper <span id="copyrightYear"></span> &#124; <a href="{{ url_for('contact') }}">Contact Us</a></span>
             </div>
         </div>
     </footer>
 
     <!-- PAGE SCRIPTS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
