--- a/templates/edit_term.html
+++ b/templates/edit_term.html
@@ -1,43 +1,41 @@
 {% extends "base.html" %}
+
 {% block content %}
-
-<div class="container">
-    <div class="row">
-        <div class="col s12">
-            <h1 class="term-info-heading center-align">Update Information for {{ term.term_name }}</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <h1 class="term-info-heading center-align">Update Information for {{ term.term_name }}</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12">
+                <form class="edit-data" method="POST" action="{{ url_for('edit_term', term_id=term._id) }}">
+                    <!-- term name -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-dumbbell prefix"></i>                
+                            <input id="term_name" name="term_name" value="{{ term.term_name }}" type="text" minlength="2" maxlength="50" pattern="([^\s][A-z0-9À-ž\s]+)" class="validate" required>
+                            <label for="term_name">Term name</label>
+                        </div>
+                    </div>
+                    <!-- term definition -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-pencil-alt prefix"></i>
+                            <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" required>{{- term.term_definition -}}</textarea>
+                            <label for="term_definition">Term definition</label>
+                        </div>
+                    </div>
+                    <!-- submit button -->
+                    <div class="row center-align">
+                        <div class="col s12">
+                            <button type="submit" class="btn-large edit green darken-2">
+                                Update term information
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col s12">
-            <form class="edit-data" method="POST" action="{{ url_for('edit_term', term_id=term._id) }}">
-                <!-- term name -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-dumbbell prefix"></i>                
-                        <input id="term_name" name="term_name" value="{{ term.term_name }}" type="text" minlength="2" maxlength="50" pattern="([^\s][A-z0-9À-ž\s]+)" class="validate" required>
-                        <label for="category_name">Term name</label>
-                    </div>
-                </div>
-                <!-- term definition -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-pencil-alt prefix"></i>
-                        <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" required>{{- term.term_definition -}}</textarea>
-                        <label for="term_definition">Term definition</label>
-                    </div>
-                </div>
-                <!-- submit button -->
-                <div class="row center-align">
-                    <div class="col s12">
-                        <button type="submit" class="btn-large edit green darken-2">
-                            Update term information
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-
 {% endblock %}
