--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-
     <div class="container">
         <div class="row">
             <div class="col s12">
@@ -25,21 +24,18 @@
                     </div>
                     <div class="row center-align">
                         <div class="col s12">
-                            <button type="submit" class="btn-large green darken-2 login">
-                                Log in
-                            </button>
+                            <button type="submit" class="btn-large green darken-2 login">Log in</button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
-
-
         <div class="row center-align">
             <div class="col s12">
-                <h6>Not signed up yet&#63; Register for a free account <a class="register-link" href="{{ url_for('register') }}"><strong>here</strong></a>.</h6>
+                <h6>
+                    Not signed up yet&#63; Register for a free account <a class="register-link" href="{{ url_for('register') }}">here</a>.
+                </h6>
             </div>
         </div>
     </div>
-
 {% endblock %}
