--- a/templates/register.html
+++ b/templates/register.html
@@ -39,7 +39,7 @@
         </div> 
         <div class="row center-align">
             <div class="input-field col s12">
-                <h6>Already have an account&#63; Log in <a class="login-link" href="/"">here</a>.</h6>
+                <h6>Already have an account&#63; Log in <a class="login-link" href="{{ url_for('login') }}">here</a>.</h6>
             </div>
         </div>  
     </div>
