--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -1,30 +1,36 @@
 {% extends "base.html" %}
+
 {% block content %}
-
-<h1>Update account details for {{ username }}</h1>
-
-<form method="POST" action="{{ url_for('update_profile', username=username) }}">
-    <div class="row">
-        <div class="input-field col s6 offset-s3">
-            <input id="username" name="username" value="{{ username }}" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-            <label for="username">Username</label>
+    <div class="container center-align">
+        <div class="row">
+            <div class="col s12">
+                <h1>Update account details for {{ username }}</h1>
+            </div>
         </div>
-        <div class="input-field col s6 offset-s3">
-            <input id="email" name="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
-            <label for="email">Email address</label>
-        </div>
-        <div class="input-field col s6 offset-s3">
-            <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-            <label for="password">Password</label>
+        <div class="row">
+            <div class="col s12">
+                <form class="update-profile" method="POST" action="{{ url_for('update_profile', username=username) }}">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="username" name="username" value="{{ username }}" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                            <label for="username">Username</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <input id="email" name="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
+                            <label for="email">Email address</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <button type="submit" class="btn-large edit blue">Update profile</button>          
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col s12">
-            <button type="submit" class="btn-large blue">
-                Update profile
-            </button>          
-        </div>
-    </div>
-</form>
-
 {% endblock %}
