fixed alignment issue with confirm deletion box on manage users page

--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -25,13 +25,15 @@
                         <a href="#{{ user._id }}" class="btn-small delete red modal-trigger">
                             <span>Delete User</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE USER"></i>
                         </a>
-                        <div id="{{ user._id }}" class="modal">
+                        <div id="{{ user._id }}" class="modal center-align">
                             <div class="modal-content">
                                 <p>Are you sure you want to delete the user {{ user.username }}&#63;</p>
                             </div>
                             <div class="modal-footer">
-                                <a href="{{ url_for('manage_users') }}" class="btn grey">Cancel</a>
-                                <a href="{{ url_for('delete_user', user_id=user._id) }}" class="btn red ">Delete</a>
+                                <div class="center-align">
+                                    <a href="{{ url_for('manage_users') }}" class="btn grey">Cancel</a>
+                                    <a href="{{ url_for('delete_user', user_id=user._id) }}" class="btn red ">Delete</a>
+                                </div>
                             </div>
                         </div>
                     </div>
