--- a/templates/index.html
+++ b/templates/index.html
@@ -64,19 +64,21 @@
                 </div>
             </div>
             {% for term in popular_terms %}
-                <div class="term-wrapper card-panel">
-                    <div class="row">
-                        <div class="col s12">
-                            <span class="term-name">{{ term.term_name }}</span>
-                        </div>
-                        <div class="col s12">
-                            <span>{{ term.term_definition }}</span>
-                        </div>
-                        <div class="col s12">
-                            <span>Score&#58; {% if term.score >= 20 %}<span class="superscore">{{ term.score }}</span>{% else %} <span class="score">{{ term.score }}</span> {% endif %}</span>
+                {% if loop.index <= 5 %}
+                    <div class="term-wrapper card-panel">
+                        <div class="row">
+                            <div class="col s12">
+                                <span class="term-name">{{ term.term_name }}</span>
+                            </div>
+                            <div class="col s12">
+                                <span>{{ term.term_definition }}</span>
+                            </div>
+                            <div class="col s12">
+                                <span>Score&#58; {% if term.score >= 20 %}<span class="superscore">{{ term.score }}</span>{% else %} <span class="score">{{ term.score }}</span> {% endif %}</span>
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
             {% endfor %}
             <div class="row center-align view-full-dict">
                 <div class="col s12">
