fixed center alignment issue with pop-up boxes for deleting items

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -125,7 +125,7 @@
                                 <a href="{{ url_for('profile', username=session['user']) }}" class="btn grey cancel">Cancel</a>
                             </div>
                             <div class="col s12 m6">
-                                <a href="{{ url_for('delete_account', username=username) }}" class="btn red delete-account">
+                                <a href="{{ url_for('delete_account', username=username) }}" class="btn red delete-record">
                                     Delete Account
                                 </a>
                             </div>
