--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -89,13 +89,19 @@
                                         <span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
                                     </a>
                                     <div id="{{ term._id }}" class="modal">
-                                        <div class="modal-content">
+                                        <div class="modal-content center-align">
                                             <p>Are you sure you want to delete this term {{ term.term_name }}&#63;</p>
                                         </div>
                                         <div class="modal-footer">
-                                            <a href="{{ url_for('view_dictionary') }}" class="btn grey">Cancel</a>
-                                            <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red">Delete</a>
+                                        <div class="row center-align">
+                                            <div class="col s12 m6">
+                                                <a href="{{ url_for('home_page') }}" class="btn grey cancel">Cancel</a>
+                                            </div>
+                                            <div class="col s12 m6">
+                                                <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red delete-record">Delete</a>
+                                            </div>
                                         </div>
+                                    </div>
                                     </div>
                                 </div>
                                 <div class="col s6">
