--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -14,7 +14,7 @@
         </div>
         <div class="row">
             <div class="col s12">
-                <a href="{{ url_for('home_page') }}" class="teal btn-large"><i class="fas fa-chevron-left"></i> Back to search</a>
+                <a href="{{ url_for('home_page') }}" class="teal locate btn-large"><i class="fas fa-chevron-left"></i> Back to search</a>
             </div>
         </div>
     </div>
