attempting css solution to enable smooth scroll behaviour in safari

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <div class="jumbotron center-align">
         <section class="callout">
             <div class="site-info">
-                <h3 class="site-info-heading">Before you start, <a href="#modal_home" class="modal-trigger">Click Here</a></h3>
+                <h3 class="site-info-heading"><a href="#modal_home" class="modal-trigger">Before you start, Click Here</a></h3>
                 <div id="modal_home" class="modal">
                     <div class="modal-header">
                         <a href="{{ url_for('home_page') }}" class="right close"><i class="fas fa-times"></i></a>
