removed javascript as affected performance on mobile devices

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="row btn-wrapper">
                 <div class="col s12">
-                    <a href="#search" class="scroll btn-large search-btn">Search dictionary</a>
+                    <a href="#search" class="btn-large search-btn">Search dictionary</a>
                 </div>
             </div>
         </section>
