--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
 
     <!-- back to top button -->
     <div id="returnToTop">
-        <a class="scroll" href="#">
+        <a href="#">
             <i class="fas fa-hand-point-up tooltipped" data-tooltip="BACK TO TOP"></i>
         </a>
     </div>
